QPID-5993 : Fix more findbugs found issues
git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1617822 13f79535-47bb-0310-9956-ffa450edef68